--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
+
 * {
 	margin: 0;
 	padding: 0;
@@ -6,6 +8,7 @@
 
 body {
 	background-color: #eee;
+	font-family: 'Lato', sans-serif;
 }
 
 #page-wrapper {
@@ -25,11 +28,15 @@ a {
 	padding: 0 20px;
 	height: 40px;
 	font-size: 1em;
-	font-weight: 900;
+	font-weight: 700;
 	text-transform: uppercase;
 	border-radius: 5px;
 	background: transparent;
 	border: 1px solid #bebebe;
+}
+
+.grid {
+	display: flex;
 }
 
 header {
@@ -45,14 +52,28 @@ header {
 nav {
 	font-weight: 400;
 	font-size: 20px;
+	width: 100%;
 }
 
 nav li {
-	color: brown;
-	list-style: none;
 	padding-bottom: 10px;
 }
 
-.logo {
-	width: auto;
+nav ul {
+	width: 35vw;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: end;
+}
+
+.logo > img {
+	width: 100%;
+	height: 100%;
+	max-width: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin-left: 20px;
 }
