--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ a {
 header {
 	position: fixed;
 	top: 0;
-	min-height: 75px;
+	height: 100px;
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -51,29 +52,107 @@ header {
 
 nav {
 	font-weight: 400;
-	font-size: 20px;
-	width: 100%;
+	font-size: 15px;
+	width: 50vw;
+	height: auto;
 }
 
 nav li {
-	padding-bottom: 10px;
+	padding: 50px;
 }
 
 nav ul {
-	width: 35vw;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	align-items: end;
 }
 
 .logo > img {
 	width: 100%;
 	height: 100%;
-	max-width: 300px;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
 	margin-left: 20px;
+}
+
+#home {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 500px;
+	margin-top: 300px;
+    margin-bottom: 1000px;
+}
+#categories {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 500px;
+	margin-top: 300px;
+}
+
+#categories h2 {
+	margin-bottom: 10px;
+	word-wrap: break-word;
+}
+
+#categories img {
+	margin-bottom: 20px;
+	max-width: 400px;
+}
+
+.category {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 800px;
+	width: 70%;
+	margin: 60px;
+}
+
+#newsletter {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 500px;
+	margin-top: 300px;
+	font-weight: 400;
+	font-size: 13px;
+	font-family: Lato, sans-serif;
+}
+
+#newsletter h2 {
+	font-weight: 400;
+	font-size: 15px;
+}
+
+#newsletter p {
+	width: 60%;
+}
+
+#newsletter input[type='email'] {
+	width: 300px;
+	padding: 10px;
+	border-radius: 10px;
+	border: 0;
+}
+
+#newsletter input[type='submit']:hover {
+	background-color: #bebebe;
+	transition: background-color 1s;
+}
+
+@media (max-width: 650px) {
+	nav > ul {
+		flex-direction: column;
+	}
 }
